force-app/main/default/objects/Litmos__Course__c/fields/Litmos__Course_Description__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Course_Description__c</fullName>
    <label>Course Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>