force-app/main/default/objects/Litmos__Course__c/fields/Litmos__Course_Id__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Course_Id__c</fullName>
    <externalId>true</externalId>
    <label>Course Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>