force-app/main/default/objects/Litmos__Course__c/fields/Litmos__Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Course_Name__c</fullName>
    <label>Course Name</label>
    <type>TextArea</type>
</CustomField>